Fixed double scrollbar when playlist overflow and footer text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -347,7 +347,7 @@ article + #playlist-hints,
 {
 	height      : 26px;
 	padding     : 0 5px;
-	line-height : 26px;
+	line-height : 24px;
 }
 
 #footer-counter
